--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     </div>
 
     <div class="footer">
-      <strong>Tip:</strong> Copy the generated command and paste it into Steam → Library → right-click the game → Properties → General → Launch Options. The string is shell-ready.
+      <strong>Tip:</strong> Copy the generated command and paste it into Steam → Library → right-click the game → Properties → General → Launch Options. And paste the code.
       <br/>
-      <strong>İpucu:</strong> Oluşan komutu kopyalayıp Steam → Kütüphane → oyuna sağ tık → Properties → General → Launch Options alanına yapıştırın. Komut terminale yapıştırmaya hazırdır.
+      <strong>İpucu:</strong> Oluşan komutu kopyalayıp Steam → Kütüphane → oyuna sağ tık → Properties → General → Launch Options alanına yapıştırın. Ve kodu yapıştır.
     </div>
   </div>
 
